--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.3",
+    "daisyui": "^4.6.0",
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.3.0",
