--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "postcss-preset-env": "^9.3.0",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.0.11"
   }
 }
