--- a/package.json
+++ b/package.json
@@ -4,19 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "npx tailwindcss -i style.css -o output.css --watch",
+    "build": "tailwindcss build style.css -o output.css"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.3",
     "daisyui": "^4.6.0",
-    "postcss": "^8.4.33",
-    "postcss-cli": "^11.0.0",
-    "postcss-preset-env": "^9.3.0",
-    "serve": "^14.2.1",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11"
+    "tailwindcss": "^3.4.1"
   }
 }
